Fixing jumping issue, cleaning up code.

--- a/source/PersistenceExplorer/PersistenceExplorer/WebApp/PersistenceExplorer.css
+++ b/source/PersistenceExplorer/PersistenceExplorer/WebApp/PersistenceExplorer.css
@@ -49,5 +49,5 @@ path {
 
 
 .slide {
-  font-size: 10em;
+  font-size: 1.5em;
 }
